# PlotPulse

./: .env.example  .gitignore  LICENSE  Makefile  README.md  interactive_create_novel.py  interactive_create_novel_enhanced.py  migrate_to_new_architecture.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_llm_novel.py
config/: agents.yaml  config.yaml  logging.yaml  models.yaml
docs/: README.md  architecture.md
docs/examples/: tutorial.md
novels/in_progress/: albert_chip_outline.md
prompts/examples/: few_shot_examples.json
prompts/system/: character_creation.txt  editing.txt  plot_design.txt  worldbuilding.txt  writing.txt
prompts/templates/: chapter_template.txt  dialogue_template.txt
scripts/: analyze_novel.py  continue_writing.py  create_novel.py  export_novel.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  character_agent.py  editing_agent.py  plot_agent.py  reviewer_agent.py  worldbuilding_agent.py  writing_agent.py
src/api/: server.py
src/architecture_redesign/: ARCHITECTURE_DESIGN.md  __init__.py  collaborative_agents.py  example_usage.py  integration_adapter.py  iterative_pipeline.py  story_brain.py  test_architecture.py  usage_guide.py
src/core/: __init__.py  agent.py  config.py  memory.py  workflow.py
src/models/: __init__.py  anthropic_model.py  base_model.py  dashscope_model.py  local_model.py  model_manager.py  openai_model.py
src/pipeline/: __init__.py  chapter_pipeline.py  interactive_pipeline.py  novel_pipeline.py
src/tools/: __init__.py  output_parser.py  prompt_templates.py  storage.py  text_utils.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_agents.py  test_character_agent.py  test_editing_agent.py  test_models.py  test_novel_pipeline.py  test_plot_agent.py  test_reviewer_agent.py  test_storage.py  (+3 more)
(+59 files in other folders)
